[gd_scene load_steps=3 format=3 uid="uid://d3xafttvo7666"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_v8xih"]
[ext_resource type="PackedScene" uid="uid://bi112daseypfb" path="res://scenes/user_interface/world_gen_settings.tscn" id="2_fts22"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v8xih")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GenerateButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Generate New World"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Load World"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Quit Game"

[node name="WorldGenSettings" parent="." instance=ExtResource("2_fts22")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="VBoxContainer/GenerateButton" to="." method="_on_generate_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
