extends Control

func _on_quit_button_pressed() -> void:
	print("quit button pressed")
	get_tree().quit()

func _on_settings_button_pressed() -> void:
	print("settings button pressed")


func _on_load_button_pressed() -> void:
	print("load button pressed")

func _on_generate_button_pressed() -> void:
	pass # Replace with function body.
